<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".fragment.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="@dimen/large_text" />

        <TextView
            android:id="@+id/txtStartTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/startTime"
            android:textSize="@dimen/add_text" />

        <TextView
            android:id="@+id/txtEndTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/endTime"
            android:textSize="@dimen/add_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:id="@+id/txtNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNote"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginEnd="@dimen/margin"
                android:layout_toStartOf="@+id/btnSave"
                android:text="@string/btnDelete"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNote"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginEnd="0dp"
                android:text="@string/btnSave" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>